--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
     <string name="move_with_result">Pindah Activity untuk Result</string>
     <string name="result_from_activity">Hasil dari Activity</string>
     <string name="choose_number">Pilih angka yang kamu suka</string>
-    <string name="_7">_7</string>
-    <string name="_14">_14</string>
-    <string name="_33">_33</string>
-    <string name="_39">_39</string>
+    <string name="_1000">1000</string>
+    <string name="_2000">2000</string>
+    <string name="_3000">3000</string>
+    <string name="_4000">4000</string>
     <string name="choose">Pilih</string>
     <string name="data_received">Ini Move Activity</string>
     <string name="object_received">object_received</string>
